# termusic

./: .gitignore  BuildForArmv7.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HowtoUseBuiltinWebService.md  LICENSE  Makefile  README.md  clippy.toml
audio/: BUILD  Cargo.toml
audio/src/: lib.rs  main.rs  range_set.rs
audio/src/decoder/: mod.rs  symphonia_decoder.rs
audio/src/fetch/: cache.rs  client.rs  mod.rs  receive.rs
daemon/: Cargo.toml
daemon/src/: client.rs  daemon.rs  main.rs  server.rs
lib/: Cargo.toml  README.md  build.rs  design.sql
lib/proto/: monitor.proto  player.proto
lib/src/: discord.rs  ids.rs  invidious.rs  lib.rs  monitor_service.rs  new_track.rs  player.rs  player_playlist_add_track_tests.rs  sqlite.rs  taskpool.rs  track.rs  types.rs  ueberzug.rs  utils.rs  utils_phase3_tests.rs  xywh.rs
lib/src/config/: key.rs  mod.rs  server_overlay.rs  theme.rs  tui_overlay.rs  yaml_theme.rs
lib/src/config/v1/: key.rs  mod.rs  theme.rs
lib/src/config/v2/: mod.rs
lib/src/dlna/: discovery.rs  media_server.rs  mod.rs  models.rs
lib/src/library_db/: migration.rs  mod.rs  track_db.rs
lib/src/library_db/migrations/: 002.sql
lib/src/new_database/: album_db.rs  album_insert.rs  album_ops.rs  artist_db.rs  artist_insert.rs  artist_ops.rs  design.sql  either.rs  migrate.rs  mod.rs  track_db.rs  track_insert.rs  track_ops.rs
lib/src/new_database/migrations/: 001.sql  002.sql
lib/src/player/: gstreamer_backend.rs  mod.rs  playlist.rs
lib/src/player/mpv_backend/: mod.rs
lib/src/player/rusty_backend/: mod.rs  seekable_buffer.rs  sink.rs
lib/src/playlist/: asx.rs  m3u.rs  mod.rs  pls.rs  xspf.rs
lib/src/podcast/: db.rs  episode.rs  mod.rs  podcast.rs
lib/src/podcast/db/: episode_db.rs  file_db.rs  migration.rs  mod.rs  podcast_db.rs
lib/src/songtag/: encrypt.rs  lrc.rs  mod.rs  service.rs
lib/src/songtag/kugou/: mod.rs  model.rs
lib/src/songtag/migu/: mod.rs  model.rs
lib/src/songtag/netease/: encrypt.rs  mod.rs  model.rs
lib/src/songtag/netease_v2/: mod.rs  model.rs
lib/src/songtag/new_netease/: mod.rs
lib/src/utils/: mod.rs
lib/themes/: 3024.dark.yml  3024.light.yml  Argonaut.yml  Ashes.dark.yml  Ashes.light.yml  Astromouse.yml  Atelierdune.dark.yml  Atelierdune.light.yml  Atelierforest.dark.yml  Atelierlakeside.dark.yml  Atelierlakeside.light.yml  Atelierseaside.dark.yml  Ayu-Dark.yml  Ayu-Mirage.yml  Base16-Default-Dark.yml  Baskerville - Count Von Count.yml  Baskerville - ivory dark.yml  Baskerville-ivorylight.yml  Bespin.light.yml  Bleh-1.yml  Blood-Moon.yml  Brewer.dark.yml  Brewer.light.yml  Catppuccin-Frappe.yml  Catppuccin-Latte.yml  Catppuccin-Macchiato.yml  Catppuccin-Mocha.yml  CatppuccinFrappe.yml  Chalk.dark.yml  Chalk.light.yml  Challenger-Deep.yml  Cloud.yml  Codeschool.dark.yml  Codeschool.light.yml  Colorfulcolors.yml  Darkside.yml  Darktooth.yml  Dawn.yml  Deafened.yml  Default.dark.yml  (+116 more)
lofty-rs/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
lofty-rs/benches/: read_file.rs  read_from_extension.rs  read_from_signature.rs
lofty-rs/examples/: tag_reader.rs  tag_stripper.rs  tag_writer.rs
lofty-rs/lofty-attr/: Cargo.toml
lofty-rs/lofty-attr/src/: lib.rs
lofty-rs/ogg_pager/: Cargo.toml
lofty-rs/ogg_pager/src/: crc.rs  error.rs  lib.rs
lofty-rs/src/: error.rs  lib.rs  probe.rs  tag.rs  tag_utils.rs  traits.rs
lofty-rs/src/ape/: constants.rs  mod.rs  properties.rs  read.rs  write.rs
lofty-rs/src/ape/tag/: ape_tag.rs  item.rs  mod.rs  read.rs  write.rs
lofty-rs/src/components/: mod.rs
lofty-rs/src/components/logic/: mod.rs
lofty-rs/src/components/tags/: aiff_tag.rs  ape_tag.rs  id3_tag.rs  mod.rs  mp4_tag.rs  ogg_tag.rs  riff_tag.rs
lofty-rs/src/id3/: mod.rs
lofty-rs/src/iff/: chunk.rs  mod.rs
lofty-rs/src/mp3/: constants.rs  header.rs  mod.rs  properties.rs  read.rs  write.rs
lofty-rs/src/mp4/: atom_info.rs  mod.rs  moov.rs  properties.rs  read.rs  trak.rs
lofty-rs/src/ogg/: constants.rs  mod.rs  read.rs  tag.rs  write.rs
lofty-rs/src/types/: album.rs  anytag.rs  file.rs  item.rs  mod.rs  picture.rs  properties.rs  tag.rs
lofty-rs/tests/: conversions.rs  inner.rs  io.rs  properties.rs
lofty-rs/tests/files/: aiff.rs  ape.rs  main.rs  mp4.rs  mpeg.rs  ogg.rs  wav.rs
lofty-rs/tests/picture/: format_parsers.rs  from_reader.rs  information.rs  main.rs
playback/: Cargo.toml  README.md
playback/benches/: async_ring.rs
playback/proto/: player.proto
playback/src/: discord.rs  gstreamer_backend.rs  lib.rs  mpris.rs  mpv_backend.rs  playlist.rs
playback/src/backends/: mod.rs
playback/src/mpv_backend/: mod.rs
playback/src/rusty_backend/: http_stream_reader.rs  icy_metadata.rs  mod.rs  queue.rs  sink.backup.rs  sink.rs  stream.rs
server/: Cargo.toml  README.md  build.rs
server/src/: cli.rs  logger.rs  main.rs  music_player_service.rs  podcast_sync.rs  podcast_sync_concurrency_tests.rs  podcast_sync_phase4_tests.rs  podcast_sync_phase5_tests.rs  podcast_sync_track_source_tests.rs  server.rs
server/src/connection/: mod.rs  tcp.rs  uds.rs
sonic-sys/: Cargo.toml  README.md  build.rs
sonic-sys/sonic/: Main.java  Makefile  Sonic.java  TODO  main.c  main_lite.c  sonic.c  sonic.h  sonic_lite.c  sonic_lite.h  spectrogram.c  wave.c  wave.h
sonic-sys/sonic/doc/: index.md  sonic.odt
sonic-sys/sonic/samples/: README
soundtouch-sys/soundtouch/: CMakeLists.txt  Makefile.am  README.html  SoundTouchConfig.cmake.in  bootstrap  configure.ac  createsrcpack  make-win.bat  readme.md  soundtouch.m4
soundtouch-sys/soundtouch/config/: am_include.mk
soundtouch-sys/soundtouch/include/: BPMDetect.h  FIFOSamplePipe.h  soundtouch_config.h.in
soundtouch-sys/soundtouch/source/: Makefile.am
stream/: Cargo.toml  LICENSE-MIT  README.md
stream/examples/: audio.rs  no_tokio_runtime.rs  stream.rs
stream/src/: http.rs  lib.rs  source.rs
tui/: Cargo.toml  README.md  build.rs
tui/src/: cli.rs  logger.rs  main.rs
tui/src/ui/: ids.rs  mod.rs  msg.rs  music_player_client.rs  playback.rs  server_req_actor.rs  tui_cmd.rs  ueberzug.rs  utils.rs
(+590 files in other folders)
