[workspace]
resolver = "2"
members = ["lib", "playback", "server", "tui"]

[workspace.package]
authors = ["tramhao <haoxinkui@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Terminal Music and Podcast Player written in Rust. Can download music from youtube(netease/migu/kugou) and then embed lyrics and album photos into mp3/m4a/flac/wav/ogg vorbis files."
repository = "https://github.com/tramhao/termusic"
homepage = "https://github.com/tramhao/termusic"
keywords = ["terminal", "tui", "music", "youtube", "podcast"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "multimedia::audio",
]
readme = "./README.md"
version = "0.13.2"
rust-version = "1.90"

[workspace.dependencies]
# --- Crate reference ---
# "version" key is required, as per https://github.com/rust-lang/cargo/issues/11133
termusic-lib = { path = "lib/", version = "0.13.2" }
# need to disable "default-features" here for "termusic-server", otherwise the "default-features" in "termusic-server" have no effect
termusic-playback = { path = "playback/", version = "0.13.2", default-features = false }

# --- Common Dependencies (used across multiple crates / termusic-lib) ---
anyhow = { version = "1.0.102", features = ["backtrace"] }
log = "0.4.32"
flexi_logger = "0.31.9"
ahash = "^0.8.12"
clap = { version = "4.6.1", features = ["derive", "env"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
thiserror = "2.0.18"
base64 = "0.22"
bytes = "1.11"
bytesize = { version = "2.4", features = ["serde"] }
chrono = "0.4.45"
lofty = "0.24.0"
dirs = "6.0"
hex = "0.4"
id3 = "1.17.0"
indoc = "2.0.7"
include_dir = "0.7"
libaes = "0.7"
colored = "3.1"
md5 = "0.8"
num-bigint = "0.4"
opml = "1.1"
parking_lot = "^0.12.5"
pathdiff = { version = "0.2.3", features = ["camino"] }
quick-xml = "0.40.1"
rand = "0.10.1"
regex = "^1.12.4"
reqwest = { version = "0.13.4", features = [
    "cookies",
    "gzip",
    "json",
    "stream",
    "query"
] }
rfc822_sanitizer = "0.3.8"
rss = { version = "2.0.13", default-features = false }
rusqlite = { version = "0.39", features = ["bundled"] }
sanitize-filename = "0.6"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_content_ref = "0.1"
serde_json = "1.0.150"
serde_yaml = "0.9"
shellexpand = { version = "3.1.1", features = ["path"] }
tokio = { version = "1.52", features = ["sync", "macros", "rt", "rt-multi-thread", "parking_lot", "process"] }
tokio-util = "0.7.18"
tokio-stream = { version = "0.1.18", features = ["sync"] }
toml = "1.1.2"
unicode-segmentation = "1.13"
urlencoding = "2.1"
walkdir = "2.5"
windows = { default-features = false, version = "0.62" }
ytd-rs = { version = "0.1", features = ["yt-dlp"] }
futures-util = "0.3.32"
either = "1.16"
# for less dependencies, keep in sync with the version ratatui uses
lru = "0.16"

# image must be upgraded together with viuer
image = "0.25.10"
viuer = "0.10.0"

# only update prost and tonic major versions together
prost = "0.14.4"
tonic = "0.14.6"
tonic-prost = "0.14.6"

# We are working on having this be only a dependency on the tui
tuirealm = { version = "~4.1.0", features = ["async-ports"] }

# --- termusic-playback specific Dependencies ---
soundtouch = { version = "0.5.4", features = ["bundled"] }
stream-download = { version = "0.24.1", features = ["reqwest-rustls"] }
symphonia = { version = "0.6.0", features = [
    "aac",
    "mp3",
    "isomp4",
    "alac",
    "flac",
    "mkv",
    "wav",
    "aiff"
] }
symphonia-adapter-libopus = { version = "0.3.0", default-features = false }
async-ringbuf = "0.3.6"
async-trait = "0.1.89"
discord-rich-presence = "1.1.0"
souvlaki = { version = "0.8.3", default-features=false, features = ["use_zbus"] }
rodio = { version = "0.22", default-features = false, features = ["playback"]}
# macos media controls event pump
objc2 = "0.6"

## Optional Backend dependencies
### Gstreamer
glib = { version = "0.21.1" }
gstreamer = { version = "0.24.1" }
### MPV
libmpv-sirno = "2.0.2-fork.1"

# --- termusic-server specific Dependencies ---

# --- termusic(tui) specific Dependencies ---
tonic-prost-build = "0.14.6"
tui-realm-stdlib = "~4.1"
tuirealm-orx-tree = "0.4.0"
percent-encoding = "2.3.2"
shell-words = "1.1.1"
sysinfo = { version = "^0.38.4", default-features = false, features = ["system"] }
# for filter audio files in explorer
mime_guess = "2.0.5"
pinyin = "0.11"
escaper = "0.1.1"
textwrap = "0.16.2"
# ratatui is very specific with its versions
unicode-width = "^0.2.2"
wildmatch = "2.6"
alphanumeric-sort = "1.5.7"

# --- Dev Dependencies ---
criterion = "0.8"
pretty_assertions = "1.4.1"

[profile.release]
lto = true
# panic = 'abort'
# opt-level = 'z'
# codegen-units = 1

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "deny"

[workspace.lints.clippy]
correctness = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
