[package]
name = "termusic-audio"
description = "The audio fetching logic for termusic"
version.workspace = true 
authors.workspace = true 
edition.workspace = true
license.workspace = true 
repository.workspace = true 
homepage.workspace = true 
keywords.workspace = true 
categories.workspace = true 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.music-player-settings]
# path = "../settings"
# version = "0.1.3"

[dependencies]
termusic-lib.workspace = true # {path = "../lib/"}
anyhow.workspace = true 
bytes = "1.3.0"
futures-util = "0.3.25"
hyper = { version = "0.14.23", features = ["client", "stream", "tcp", "http1", "http2"] }
parking_lot = "0.12.1"
tempfile = "3.3.0"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
symphonia = { version = "0.5.1", features = ["aac", "alac", "mp3", "isomp4", "flac"] }
hyper-rustls = "0.24.0"
rustls = { version = "0.21.0", features = ["dangerous_configuration"] }
mime_guess = "2.0.4"
url = "2.3.1"
md5 = "0.7.0"
log = "0.4.17"
webpki-roots = "0.23.0"
