[package]
name = "termusic-daemon"
version.workspace = true 
authors.workspace = true 
edition.workspace = true
license.workspace = true 
description = "daemon that can play music and running by itself. Works with termusic. " 
repository.workspace = true 
homepage.workspace = true 
keywords.workspace = true 
categories.workspace = true 


[[bin]]
name = "termusicd"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
termusic-lib.workspace = true # = {path = "../lib/"}
termusic-playback.workspace = true # = {path = "playback/"}
anyhow.workspace = true 
lazy_static.workspace = true
log.workspace = true 
lovely_env_logger.workspace = true 
serde.workspace = true
bincode.workspace = true
rust-utils.workspace = true
sysinfo.workspace = true
tokio.workspace = true

[features]
default = []
# left for debug
# default = ["gst"]
# default = ["mpv"]
# default = ["discord"]
# mpris = ["souvlaki"]
# cover = ["tempfile"]
# cover = []
# gst = ["gstreamer","glib"]
# mpv = ["libmpv-sys"]
# discord = ["discord-rich-presence"]


