[package]
name = "termusic-lib"
description = "library to support termusic."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true


[lib]
name = "termusiclib"
path = "src/lib.rs"
doctest = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ahash.workspace = true #   = "^0.8"
anyhow.workspace = true
thiserror.workspace = true
base64.workspace = true
bytes.workspace = true #   = "1"
bytesize.workspace = true
chrono.workspace = true #   = "^0.4.23"
dirs.workspace = true
escaper.workspace = true #   = "0.1.1"
figment.workspace = true # = { version="0.10", features = ["toml"]}
hex.workspace = true # = "0.4"
id3.workspace = true # = "1"
indoc.workspace = true
image.workspace = true # = "0.24"
include_dir.workspace = true # = "0.7"
libaes.workspace = true # = "0.6"
log.workspace = true # = "0.4"
lofty.workspace = true #  = "0.12"
md5.workspace = true #  = "0.7"
num-bigint.workspace = true #  = "0.4"
opml.workspace = true #   = "1"
parking_lot.workspace = true
pinyin.workspace = true #  = "0.9"
quick-xml.workspace = true #  = "0.28"
rand.workspace = true #  = "0.8"
regex.workspace = true #  = "^1.5.5"
reqwest.workspace = true
rfc822_sanitizer.workspace = true #   = "0.3" 
rss.workspace = true #   = "2"
rusqlite.workspace = true #  = { version = "0.29", features = ["bundled"]}
sanitize-filename.workspace = true #   = "0.4"
semver.workspace = true #   = "^1"
serde.workspace = true #  = { version = "1.0", features = ["derive"] }
serde_json.workspace = true #  = "1.0"
serde_yaml.workspace = true
shellexpand.workspace = true #  = "3"
textwrap.workspace = true #   = "0.16"
toml.workspace = true #  = "0.7"
tuirealm.workspace = true #   = { version = "1", features = ["serialize"] }
unicode-segmentation.workspace = true #   = "1.10"
unicode-width.workspace = true #   = "^0.1.8"
urlencoding.workspace = true #   = "2"
viuer.workspace = true #   = "0.6"
walkdir.workspace = true #   = "2"
wildmatch.workspace = true #   = "2"
ytd-rs.workspace = true #   = { version = "0.1", features = ["yt-dlp"]}
futures-util.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tonic.workspace = true
prost.workspace = true
alphanumeric-sort.workspace = true
lru.workspace = true

[build-dependencies]
cc.workspace = true
tonic-build.workspace = true


[features]
default = []

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
