[package]
name = "lofty"
version = "0.3.0"
authors = ["Serial <69764315+Serial-ATA@users.noreply.github.com>", "Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Unified IO for different types of audio metadata"
repository = "https://github.com/Serial-ATA/lofty-rs"
keywords = ["tags", "audio", "metadata"]
categories = ["accessibility", "multimedia::audio"]

[dependencies]
# Id3
id3 = {version = "0.6.4", optional = true} # De/Encoding
filepath = { version = "0.1.1", optional = true } # wav/aiff only supports paths for some reason
# Ogg
ogg_pager = { version = "0.1.7", optional = true }
# Mp4
mp4ameta = {version = "0.11.0", optional = true}
# Case insensitive keys (APE/FLAC/Opus/Vorbis)
unicase = { version = "2.6.0", optional = true }

# Errors
thiserror = "1.0.26"

base64 = "0.13.0"
byteorder = "1.4.3"
cfg-if = "1.0.0"

lofty_attr = "0.1.9"

[features]
default = ["all_tags"]
format-mp4 = ["mp4ameta"]
format-flac = ["unicase"]
format-opus = ["ogg_pager", "unicase"]
format-vorbis = ["ogg_pager", "unicase"]
format-ape = ["unicase"]
format-id3 = ["id3", "filepath"]
format-aiff = []
format-riff = []
format-ogg = ["format-flac", "format-opus", "format-vorbis"]
all_tags = ["format-ogg", "format-mp4", "format-id3", "format-riff", "format-ape", "format-aiff"]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "read_from_extension"
harness = false

[[bench]]
name = "read_from_signature"
harness = false