[package]
name = "lofty"
version = "0.3.0"
authors = ["Serial <69764315+Serial-ATA@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Unified IO for different types of audio metadata"
repository = "https://github.com/Serial-ATA/lofty-rs"
keywords = ["tags", "audio", "metadata"]
categories = ["accessibility", "multimedia::audio"]

[dependencies]
# Id3
flate2 = { version = "1.0.21", optional = true }
# Ogg
ogg_pager = "0.1.7"

lazy_static = "1.4.0"
paste = "1.0.5"
base64 = "0.13.0"
byteorder = "1.4.3"

[features]
default = ["mp4_ilst", "vorbis_comments", "ape", "id3v1", "id3v2", "aiff_text_chunks", "riff_info_list"]
mp4_ilst = []
vorbis_comments = []
ape = []
id3v1 = []
id3v2 = ["flate2"]
id3v2_restrictions = []
aiff_text_chunks = []
riff_info_list = []

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
structopt = { version = "0.3.25", default-features = false }
tempfile = "3.2.0"

[[bench]]
name = "read_file"
harness = false
