[package]
name = "termusic-playback"
description = "playback library to support termusic." 
version.workspace = true 
authors.workspace = true 
edition.workspace = true
license.workspace = true 
repository.workspace = true 
homepage.workspace = true 
keywords.workspace = true 
categories.workspace = true 


[lib]
name = "termusicplayback"
path = "src/lib.rs"
doctest = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
termusic-lib.workspace = true # {path = "../lib/"}
anyhow.workspace = true 
cpal.workspace = true
discord-rich-presence.workspace = true
glib = { version="0.17", optional = true }
gstreamer = { version="0.20", optional = true}
lazy_static.workspace = true
libmpv-sys  = { version = "3", optional = true }
log.workspace = true # = "0.4"
lovely_env_logger.workspace = true # = "0.6"
pathdiff.workspace = true #  = { version = "0.2", features = ["camino"] }
rand.workspace = true #  = "0.8"
reqwest.workspace = true
serde.workspace = true
souvlaki.workspace = true
symphonia.workspace = true #  = { version = "0.5.1",  features = ["aac","mp3","isomp4","alac"]}
tokio.workspace = true
ureq.workspace = true #   = "2"
tonic.workspace = true
prost.workspace = true

[features]
default = []
# left for debug
# default = ["mpv"]
# default = ["gst"]
# cover = []
gst = ["gstreamer","glib"]
mpv = ["libmpv-sys"]


[dev-dependencies]
pretty_assertions = "1"

[build-dependencies]
tonic-build.workspace = true