[package]
name = "termusic-playback"
description = "playback library to support termusic."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true


[lib]
name = "termusicplayback"
path = "src/lib.rs"
doctest = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
termusic-lib.workspace = true
termusic-stream.workspace = true
anyhow.workspace = true
cpal.workspace = true
discord-rich-presence.workspace = true
glib = { workspace = true, optional = true }
gstreamer = { workspace = true, optional = true}
lazy_static.workspace = true
libmpv-sys  = { workspace = true, optional = true }
log.workspace = true # = "0.4"
# lovely_env_logger.workspace = true # = "0.6"
pathdiff.workspace = true #  = { version = "0.2", features = ["camino"] }
rand.workspace = true #  = "0.8"
reqwest.workspace = true
serde.workspace = true
souvlaki.workspace = true
symphonia.workspace = true #  = { version = "0.5.1",  features = ["aac","mp3","isomp4","alac"]}
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
base64.workspace = true
async-channel.workspace = true

[features]
default = []
# left for debug
# default = ["mpv"]
# default = ["gst"]
# cover = []
gst = ["dep:gstreamer", "dep:glib"]
mpv = ["dep:libmpv-sys"]
rusty = []
all-backends = ["gst", "mpv", "rusty"]


[dev-dependencies]
pretty_assertions.workspace = true

[build-dependencies]
tonic-build.workspace = true
