[package]
name = "termusic-playback"
description = "playback library to support termusic."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true


[lib]
name = "termusicplayback"
path = "src/lib.rs"
doctest = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
termusic-lib.workspace = true
anyhow.workspace = true
async-channel.workspace = true
async-trait.workspace = true
base64.workspace = true
discord-rich-presence.workspace = true
glib = { workspace = true, optional = true }
gstreamer = { workspace = true, optional = true}
lazy_static.workspace = true
libmpv-sirno = { workspace = true, optional = true }
log.workspace = true # = "0.4"
parking_lot.workspace = true
pathdiff.workspace = true #  = { version = "0.2", features = ["camino"] }
rand.workspace = true #  = "0.8"
reqwest.workspace = true
serde.workspace = true
soundtouch = { workspace = true, optional = true }
souvlaki.workspace = true
stream-download.workspace = true
symphonia.workspace = true
rodio.workspace = true
tokio.workspace = true
# soundtouch= { git = 'https://github.com/Drewol/soundtouch-rs.git' }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58.0"
features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_LibraryLoader",
	"Win32_UI_WindowsAndMessaging"
]

[features]
# NOTE: do NOT enable any backends here, enable them in crate "server"!
# otherwise you will not be able to start that backend
default = []
# cover = []
gst = ["dep:gstreamer", "dep:glib"]
mpv = ["dep:libmpv-sirno"]
rusty-soundtouch = ["dep:soundtouch"]
all-backends = ["gst", "mpv"]


[dev-dependencies]
pretty_assertions.workspace = true
