[package]
name = "termusic-server"
version.workspace = true 
authors.workspace = true 
edition.workspace = true
license.workspace = true 
description = "server that can play music and running by itself. Works with termusic. " 
repository.workspace = true 
homepage.workspace = true 
keywords.workspace = true 
categories.workspace = true 


# [[bin]]
# name = "termusicd"
# path = "src/main.rs"

[[bin]]
name = "termusic-server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
termusic-lib.workspace = true # = {path = "../lib/"}
termusic-playback.workspace = true # = {path = "playback/"}
anyhow.workspace = true 
lazy_static.workspace = true
log.workspace = true 
lovely_env_logger.workspace = true 
serde.workspace = true
bincode.workspace = true
rust-utils.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tonic.workspace = true

[features]
default = []
# # left for debug
# default = ["mpv"]
# default = ["gst"]
gst = []
mpv = []


