[package]
name = "termusic-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "server that can play music and running by itself. Works with termusic. "
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true


[[bin]]
name = "termusic-server"
path = "src/server.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
termusic-lib.workspace = true # = {path = "../lib/"}
termusic-playback = { workspace = true, default-features = false }
anyhow.workspace = true
ctrlc.workspace = true
lazy_static.workspace = true
log.workspace = true
flexi_logger.workspace = true
colored.workspace = true
parking_lot.workspace = true
serde.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tonic.workspace = true
clap.workspace = true


[features]
# NOTE: this package fails to compile if not one of the backends (rusty, gst, mpv) are compiled in!
default = []
# # left for debug
# default = ["mpv"]
# default = ["gst"]
gst = ["termusic-playback/gst"]
mpv = ["termusic-playback/mpv"]
# rusty = ["termusic-playback/rusty"]
rusty-soundtouch = ["termusic-playback/rusty-soundtouch"]
all-backends = ["gst", "mpv", "rusty-soundtouch"]
