[package]
name = "sonic-sys"
version = "1.0.0"
edition = "2021"
authors = ["Musharraf Omer <ibnomer2011@hotmail.com>"]
description = "Raw FFI bindings to sonic rate boost library"
license = "MIT"
keywords = ["FFI", "sonic", "audio", "tts", "speech"]
categories = ["external-ffi-bindings", "api-bindings"]
repository = "https://github.com/mush42/sonic-sys"
homepage = "https://github.com/mush42/sonic-sys"
readme = "README.md"

[build-dependencies.bindgen]
version = "0.59.1"
default-features = false

[build-dependencies]
cc = "1.0.79"
