[package]
name = "termusic"
description = "Terminal Music and Podcast Player written in Rust. Can download music from youtube(netease/migu/kugou) and then embed lyrics and album photos into mp3/m4a/flac/wav/ogg vorbis files."
version.workspace = true 
authors.workspace = true 
edition.workspace = true
license.workspace = true 
repository.workspace = true 
homepage.workspace = true 
keywords.workspace = true 
categories.workspace = true 
readme.workspace = true 


[[bin]]
name = "termusic"
path = "src/main.rs"
doctest = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
termusic-lib.workspace = true
termusic-playback.workspace = true # = {path = "playback/"}
anyhow.workspace = true 
# bincode.workspace = true
clap.workspace = true 
dirs.workspace = true 
id3.workspace = true # = "1"
image.workspace = true # = "0.24"
include_dir.workspace = true # = "0.7"
lazy_static.workspace = true # = "1.4"
# log.workspace = true # = "0.4"
# lovely_env_logger.workspace = true # = "0.6"
lofty.workspace = true #  = "0.12"
rand.workspace = true #  = "0.8"
regex.workspace = true #  = "^1.5.5"
rust-utils.workspace = true
# serde.workspace = true
serde_json.workspace = true #  = "1.0"
shellexpand.workspace = true #  = "3"
souvlaki = { version = "0.6", optional = true }
sysinfo.workspace = true
# tuirealm = { path = "../tui-realm", features = ["serialize"] }
# tui-realm-stdlib = {path = "../tui-realm-stdlib"}
# tui-realm-treeview = { path = "../tui-realm-treeview"}
tuirealm.workspace = true #   = { version = "1", features = ["serialize"] }
tui-realm-stdlib.workspace = true #   = "1"
tui-realm-treeview.workspace = true #   = "1"
unicode-width.workspace = true #   = "^0.1.8"
ureq.workspace = true #   = "2"
urlencoding.workspace = true #   = "2"
# viuer = { version = "0.6", features = ["sixel"] }
viuer.workspace = true #   = "0.6"
# yaml-rust.workspace = true #   = "^0.4.5"
ytd-rs.workspace = true #   = { version = "0.1", features = ["yt-dlp"]}
walkdir.workspace = true #   = "2"
wildmatch.workspace = true #   = "2"
# opml.workspace = true #   = "1"
# chrono.workspace = true #   = "^0.4.23"
# rss.workspace = true #   = "2"
# rfc822_sanitizer.workspace = true #   = "0.3" 
# ahash.workspace = true #   = "^0.8"
# semver.workspace = true #   = "^1"
escaper.workspace = true #   = "0.1.1"
textwrap.workspace = true #   = "0.16"
# bytes.workspace = true #   = "1"
# unicode-segmentation.workspace = true #   = "1.10"
sanitize-filename.workspace = true #   = "0.4"
percent-encoding.workspace = true #   = "2.2"
# reqwest = { version="0.11", features = ["stream"] }
# tokio = { version = "1", features = ["full"] }



[features]
default = []
# left for debug
# default = ["gst"]
# default = ["mpv"]
# default = ["discord"]
mpris = ["souvlaki"]
# cover = ["tempfile"]
cover = []
# gst = ["gstreamer","glib"]
gst = []
# mpv = ["libmpv-sys"]
mpv = []
# discord = ["discord-rich-presence"]
discord = []

[dev-dependencies]
pretty_assertions.workspace = true # = "1"
# anyhow = "1"
# hound = "3.4"
# ringbuf = "0.3"
# clap = { version = "3.1", default-features = false, features = ["std"] }
